Fix chart on mobile

--- a/frontend/src/styles/chart.scss
+++ b/frontend/src/styles/chart.scss
@@ -67,6 +67,12 @@
       }
     }
   }
+
+  .chart-container-digital-agenda {
+    &.CountryProfileRainbow {
+      border: none !important;
+    }
+  }
 }
 
 body.digital-agenda-embedded {
